# intune-macos-tools

./: .gitignore  README.md  example-creds.json  intune_tools.css  intune_tools.py  pyproject.toml  requirements.txt
src/intune_tools/: __init__.py
src/intune_tools/core/: __init__.py  auth.py  graph_client.py
src/intune_tools/modules/: __init__.py  analytics.py  app_manager.py  device_manager.py  group_manager.py  policy_manager.py  profile_manager.py
src/intune_tools/utils/: __init__.py  helpers.py
