[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intune-macos-tools"
version = "0.1.0"
description = "Terminal UI for managing macOS apps and devices in Microsoft Intune."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "", email = "" }]
dependencies = [
  "azure-identity>=1.15.0",
  "msgraph-sdk>=1.2.0",
  "msgraph-core>=1.0.0",
  "microsoft-kiota-abstractions",
  "textual>=0.47.0",
  "rich>=13.7.0",
  "inquirer>=3.2.0",
  "click>=8.1.7",
  "tabulate>=0.9.0",
  "PyYAML>=6.0.1",
  "python-dateutil>=2.8.2",
  "keyring>=24.3.0",
  "cryptography>=41.0.7",
  "aiohttp>=3.9.1",
  "asyncio-throttle>=1.0.2",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "jinja2>=3.1.3",
  "websockets>=12.0",
]
dev = [
  "pytest>=7.4.4",
  "pytest-asyncio>=0.23.3",
  "black>=23.12.1",
  "pylint>=3.0.3",
  "textual-dev>=1.3.0",
]

[tool.uv]
# Default Python to use if uv manages one; can be overridden locally.
cache-dir = ".uv-cache"

